--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     height: 100%;
 }
@@ -19,19 +23,18 @@ body {
         background-color: #fff;
         margin: 0;
         padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         >li {
-            background-color: #fff;
-            display: flex;
-            justify-content: space-between;
             list-style-type: none;
-            padding: 4px 8px;
-            width: 400px;
+            width: 100%;
+            padding: 4px 80px;
+            border-bottom: 1px solid #ddd;
 
-            >.mana-cost {
-                >i {
-                    margin-left: 2px;
-                }
+            &:last-child {
+                border-bottom: none;
             }
         }
     }
