--- a/src/Login.scss
+++ b/src/Login.scss
@@ -20,7 +20,7 @@ form.login {
         font-size: 16px;
         padding: 8px 16px;
         color: #fff;
-        background-color: #888;
+        background-color: #fff;
         border: outset 3px #888;
         cursor: pointer;
         outline: none;
