Alright, inventory is functional and even has a cheat function to just add a list of cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,7 @@ body {
         flex-direction: column;
         align-items: center;
         flex: 1;
+        overflow-y: scroll;
 
         >li {
             list-style-type: none;
