--- a/src/AddCardModal.scss
+++ b/src/AddCardModal.scss
@@ -5,6 +5,8 @@
 
     >form {
         height: 100%;
+        display: flex;
+        flex-direction: column;
 
         >button, >input {
             flex: 0;
